# fits3

./: .gitignore  Cargo.toml  index.html  package.json
src/: gui.rs  lib.rs  math.rs  selector.rs  texture.rs  vertex.rs  volumetric.rs
src/shaders/: cube.frag  isosurface.frag  volumetric.frag  wireframe.frag  wireframe.vert
